[tool.poetry]
name = "gpt-test"
version = "0.1.0"
description = ""
authors = ["Brian Finney <bri@nfinney.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyautogen = {path = "./vendor/autogen", develop = true}
llmlingua = {path = "./vendor/LLMLingua", develop = true}
prompt-toolkit = "^3.0.41"
Pygments = "^2.17.2"
asyncio = "^3.4.3"
pytest = "^7.4.3"
docker = "^7.0.0"
accelerate = "^0.25.0"
torch = "^2.1.2"
transformers = "^4.36.1"
einops = "^0.7.0"
litellm = "^1.15.1"


[[tool.poetry.source]]
name = "auto_gptq_src"
url = "https://huggingface.github.io/autogptq-index/whl/cu118/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
